fix: use stable sort in ListView and make it pure, footer align

--- a/src/component/Footer.css
+++ b/src/component/Footer.css
@@ -3,5 +3,6 @@
 }
 
 .footer-li li {
-  margin-right: 16px;
+  margin-left: 8px;
+  margin-right: 8px;
 }
